fix(Data Explorer): title text color in dark mode

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -24,6 +24,7 @@
       margin-block-end: 0.83em;
       margin-inline-start: 0px;
       margin-inline-end: 0px;
+      color: var(--react-autoql-text-color-primary);
     }
 
     .intro-message-list-container {
